[workspace]
members = [
    "core-types",
    "order-book",
    "matching-engine",
    "market-manager",
    "persistence",
    "cache",
    "api",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-str"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.12"
anyhow = "1"
chrono = "0.4"
